@@ -2,9 +2,7 @@ Makefile.PL
 MANIFEST
 README
 t/01base.t
-t/02AlphaBeta.t
 lib/version.pm
-lib/version/AlphaBeta.pm
 version.xs
 util.c
 util.h
